--- a/blogs.html
+++ b/blogs.html
@@ -49,8 +49,8 @@
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/shivank-batra-4594b9202/">
-                    LinkedIn
+                <a class="link" href="https://www.instagram.com/foot_vizz/">
+                    Data Viz Page
                 </a>
             </li>
         </ul>
