changes to secondary links

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
                 <small>February, 2022</small>
                 <p>A player recommendation system which outputs the most similar players for a given player based on various features collected via Fbref from 17-18 to 21-22 season for top five European Leagues.</p>
                 <a class="link link-primary" href="https://player-recommendation-fbref.herokuapp.com/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/player-recommendaton-system">View Source Code</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/player-recommendaton-system">Source Code</a>
             </li>
         </div>
 
@@ -43,7 +43,7 @@
                 <small>September, 2021</small>
                 <p>A Python package to scrape shots data from <a href="understat.com">understat.com</a> for either a single game or a whole season.</p>
                 <a class="link link-primary" href="https://pypi.org/project/understatscraper/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/understatscraper">View Source Code</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/understatscraper">Source Code</a>
             </li>
         </div>
 
@@ -53,7 +53,7 @@
                 <small>August, 2021</small>
                 <p>A web app to visualise and analyse shot tendecies of various teams and players in the top five European leagues with availability of different filter options.</p>
                 <a class="link link-primary" href="https://shotmap-app2a.herokuapp.com/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/ShotMap-Streamlit-WebApp">View Source Code</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/ShotMap-Streamlit-WebApp">Source Code</a>
             </li>
         </div>
     </ul>
