--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>technologies</h1>
-            <p>I am familiar with Python, Numpy, Pandas and Matplotlib, HTML5, CSS3, Git, JavaScript and Web Hosting.</p>
+            <p>I am proficient with Python and its data science libraries: Numpy, Pandas, Matplotlib and Scikit-learn. Currently in the process of learning MERN stack.</p>
         </div>
   
     </section>
