portfolio site updated

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,15 @@
     <ul class="list-non-bullet">
         <div class="container container-center space-pad">
             <li>
+                <h1>Neogcamp Level 0 Mark 15</h1>
+                <small>August, 2022</small>
+                <p>All the mini web applications made to complete the mark15 for neogcamp level 0. Majority apps created using vanilla CSS and JS.</p>
+                <a class="link link-primary" href="neog_projects.html">See Projects</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra">Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center space-pad">
+            <li>
                 <h1>Player Recommendation System</h1>
                 <small>February, 2022</small>
                 <p>A player recommendation system which outputs the most similar players for a given player based on various features collected via Fbref from 17-18 to 21-22 season for top five European Leagues.</p>
