projects section updated

--- a/neog_projects.html
+++ b/neog_projects.html
@@ -106,6 +106,15 @@
                 <a class="link link-secondary" href="https://github.com/Shivank12batra/Cash-Register-App">Source Code</a>
             </li>
         </div>
+        <div class="container container-center space-pad">
+            <li>
+                <h1>birthday palindrome</h1>
+                <small>August, 2022</small>
+                <p>Is your birthday a palindrome? If not, find the next nearest palindrome date with this web app.</p>
+                <a class="link link-primary" href="https://palindrome-birthday-neog-mark-13.netlify.app/">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/palindrome-birthday">Source Code</a>
+            </li>
+        </div>
     </ul>
     <footer class="footer">
         <div class="footer-header">Social Media Presence</div>
