new project added

--- a/neog_projects.html
+++ b/neog_projects.html
@@ -115,6 +115,15 @@
                 <a class="link link-secondary" href="https://github.com/Shivank12batra/palindrome-birthday">Source Code</a>
             </li>
         </div>
+        <div class="container container-center space-pad">
+            <li>
+                <h1>stock profit or loss</h1>
+                <small>August, 2022</small>
+                <p>A website which helps user how much profit or loss he/she is making in percentage & absolute value.</p>
+                <a class="link link-primary" href="https://stock-profit-loss-neog-mark-14.netlify.app/">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/stock-profit-loss-mark-15">Source Code</a>
+            </li>
+        </div>
     </ul>
     <footer class="footer">
         <div class="footer-header">Social Media Presence</div>
