blog section updated

--- a/blogs.html
+++ b/blogs.html
@@ -28,6 +28,14 @@
     <ul class="list-non-bullet">
         <div class="container container-center space-pad">
             <li>
+                <h1>The Mysterious 'This' Keyword In Javascript Explained</h1>
+                <small>September, 2022</small>
+                <p>This blogpost explains the <strong>this</strong> special keyword in Javascript alongside the concepts of default, implicit, explicit binding and the new keyword charts.</p>
+                <a class="link link-primary" href="https://medium.com/@shivank56batra/the-mysterious-this-keyword-in-javascript-explained-eabf6c3b7e0f">Read Blog</a>
+            </li>
+        </div>
+        <div class="container container-center space-pad">
+            <li>
                 <h1>Dumbbell Charts In Python Tutorial</h1>
                 <small>October, 2021</small>
                 <p>A small tutorial explaining the process of creating <strong>dumbbell charts</strong> in Python using data analysis libraries: Numpy, Pandas and Matplotlib.</p>
