typo fixed in blog section

--- a/blogs.html
+++ b/blogs.html
@@ -30,7 +30,7 @@
             <li>
                 <h1>The Mysterious 'This' Keyword In Javascript Explained</h1>
                 <small>September, 2022</small>
-                <p>This blogpost explains the <strong>this</strong> special keyword in Javascript alongside the concepts of default, implicit, explicit binding and the new keyword charts.</p>
+                <p>This blogpost explains the <strong>this</strong> special keyword in Javascript alongside the concepts of default, implicit, explicit binding and the new keyword.</p>
                 <a class="link link-primary" href="https://medium.com/@shivank56batra/the-mysterious-this-keyword-in-javascript-explained-eabf6c3b7e0f">Read Blog</a>
             </li>
         </div>
