media links updated

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/prstrggr">
+                <a class="link" href="https://twitter.com/shvnk_12">
                     Twitter
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.instagram.com/foot_vizz/">
-                    Data Viz Page
+                <a class="link" href="https://www.linkedin.com/in/shivank-batra-4594b9202/">
+                    LinkedIn
                 </a>
             </li>
         </ul>
