--- a/neog_projects.html
+++ b/neog_projects.html
@@ -14,10 +14,10 @@
                 <a class="link" href="/">home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/projects.html">projects</a>
+                <a class="link link-active" href="/projects.html" target="_blank">projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/blogs.html">blogs</a>
+                <a class="link" href="/blogs.html" target="_blank">blogs</a>
             </li>
         </ul>
     </nav>
@@ -30,8 +30,8 @@
                 <h1>How well do you know me?</h1>
                 <small>August, 2022</small>
                 <p>A simple CLI app made using nodeJS. Top scores are recorded and display at the end.</p>
-                <a class="link link-primary" href="https://replit.com/@shivank12batra/game?embed=1&output=1">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/Mark-1-Neog">Source Code</a>
+                <a class="link link-primary" href="https://replit.com/@shivank12batra/game?embed=1&output=1" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/Mark-1-Neog" target="_blank">Source Code</a>
             </li>
         </div>
         <div class="container container-center space-pad">
@@ -39,8 +39,8 @@
                 <h1>Are you a football fan?</h1>
                 <small>August, 2022</small>
                 <p>A simple CLI app made using nodeJS. Top scores are recorded and display at the end.</p>
-                <a class="link link-primary" href="https://replit.com/@shivank12batra/game-1?embed=1&output=1">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/Mark-2-Neog">Source Code</a>
+                <a class="link link-primary" href="https://replit.com/@shivank12batra/game-1?embed=1&output=1" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/Mark-2-Neog" target="_blank">Source Code</a>
             </li>
         </div>
         <div class="container container-center space-pad">
@@ -48,8 +48,8 @@
                 <h1>Minions Speak App</h1>
                 <small>August, 2022</small>
                 <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
-                <a class="link link-primary" href="https://minion-js-translator.netlify.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/Minion-Translator-JS">Source Code</a>
+                <a class="link link-primary" href="https://minion-js-translator.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/Minion-Translator-JS" target="_blank">Source Code</a>
             </li>
         </div>
         <div class="container container-center space-pad">
@@ -57,8 +57,8 @@
                 <h1>Doge Translator App</h1>
                 <small>August, 2022</small> 
                 <p>This simple translator app uses the fun tranlation api to translate your input text to doge language. Made using HTML, CSS and vanilla JS.</p>
-                <a class="link link-primary" href="https://neog-mark-7-doge-translator.netlify.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/Translation-App-Mark-7-Neog">Source Code</a>
+                <a class="link link-primary" href="https://neog-mark-7-doge-translator.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/Translation-App-Mark-7-Neog" target="_blank">Source Code</a>
             </li>
         </div>
         <div class="container container-center space-pad">
@@ -66,8 +66,8 @@
                 <h1>Emoji Translator App</h1>
                 <small>August, 2022</small>
                 <p>I struggle with understanding the emojis. Do you too? If yes, then see this library of emojis with meaning</p>
-                <a class="link link-primary" href="https://urvgke.csb.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/emoji-translator-app">Source Code</a>
+                <a class="link link-primary" href="https://urvgke.csb.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/emoji-translator-app" target="_blank">Source Code</a>
             </li>
         </div>
         <div class="container container-center space-pad">
@@ -75,8 +75,8 @@
                 <h1>Book Recommendation</h1>
                 <small>August, 2022</small>
                 <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS with love</p>
-                <a class="link link-primary" href="https://9tniz4.csb.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/book-recommendation-app">Source Code</a>
+                <a class="link link-primary" href="https://9tniz4.csb.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/book-recommendation-app" target="_blank">Source Code</a>
             </li>
         </div>
         <div class="container container-center space-pad">
@@ -84,8 +84,8 @@
                 <h1>learn-triangles</h1>
                 <small>August, 2022</small>
                 <p>A website which helps you to learn about triangles</p>
-                <a class="link link-primary" href="https://is-triangle-app.netlify.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/is-triangle">Source Code</a>
+                <a class="link link-primary" href="https://is-triangle-app.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/is-triangle" target="_blank">Source Code</a>
             </li>
         </div>
         <div class="container container-center space-pad">
@@ -93,8 +93,8 @@
                 <h1>birthday-lucky</h1>
                 <small>August, 2022</small>
                 <p>A website which can help you to check whether your birthday is lucky or not.</p>
-                <a class="link link-primary" href="https://lucky-birthday-vanilla-js.netlify.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/birthday-lucky-vanillaJS">Source Code</a>
+                <a class="link link-primary" href="https://lucky-birthday-vanilla-js.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/birthday-lucky-vanillaJS" target="_blank">Source Code</a>
             </li>
         </div>
         <div class="container container-center space-pad">
@@ -102,8 +102,8 @@
                 <h1>cash register</h1>
                 <small>August, 2022</small>
                 <p>A cash register manager which helps the user by telling how can he/she return the change to the customer with minimum number of notes.</p>
-                <a class="link link-primary" href="https://cash-register-app-vanilla-js.netlify.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/Cash-Register-App">Source Code</a>
+                <a class="link link-primary" href="https://cash-register-app-vanilla-js.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/Cash-Register-App" target="_blank">Source Code</a>
             </li>
         </div>
         <div class="container container-center space-pad">
@@ -111,8 +111,8 @@
                 <h1>birthday palindrome</h1>
                 <small>August, 2022</small>
                 <p>Is your birthday a palindrome? If not, find the next nearest palindrome date with this web app.</p>
-                <a class="link link-primary" href="https://palindrome-birthday-neog-mark-13.netlify.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/palindrome-birthday">Source Code</a>
+                <a class="link link-primary" href="https://palindrome-birthday-neog-mark-13.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/palindrome-birthday" target="_blank">Source Code</a>
             </li>
         </div>
         <div class="container container-center space-pad">
@@ -120,8 +120,8 @@
                 <h1>stock profit or loss</h1>
                 <small>August, 2022</small>
                 <p>A website which helps user how much profit or loss he/she is making in percentage & absolute value.</p>
-                <a class="link link-primary" href="https://stock-profit-loss-neog-mark-14.netlify.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Shivank12batra/stock-profit-loss-mark-15">Source Code</a>
+                <a class="link link-primary" href="https://stock-profit-loss-neog-mark-14.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Shivank12batra/stock-profit-loss-mark-15" target="_blank">Source Code</a>
             </li>
         </div>
     </ul>
@@ -129,17 +129,17 @@
         <div class="footer-header">Social Media Presence</div>
         <ul class="social links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/Shivank12batra">
+                <a class="link" href="https://github.com/Shivank12batra" target="_blank">
                     Github
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/shvnk_12">
+                <a class="link" href="https://twitter.com/shvnk_12" target="_blank">
                     Twitter
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/shivank-batra-4594b9202/">
+                <a class="link" href="https://www.linkedin.com/in/shivank-batra-4594b9202/" target="_blank">
                     LinkedIn
                 </a>
             </li>
